# hackraft

./: Makefile  Makefile.am  README  README_LUA.txt  artifact.cpp  artifact.h  aspect.cpp  aspect.h  character.cpp  character.h  configure.ac  error.cpp  error.h  gauge.cpp  gauge.h  init.lua  inventory.cpp  inventory.h  log.cpp  log.h  luawrapper.cpp  luawrapper.h  main.cpp  morph.lua  name.cpp  name.h  object.cpp  object.h  place.cpp  place.h  player.cpp  player.h  plop.lua  screen.cpp  screen.h  script.cpp  script.h  server.cpp  server.h  spawn.lua  (+10 more)
scripts/: close.lua  damn.lua  dance.lua  death.lua  draw.lua  init.lua  kill.lua  look.lua  name.lua  open.lua  plop.lua  spikes.lua  wipe.lua
